--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,5 +25,18 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:24.2.1'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.squareup.okhttp3:okhttp:3.2.0'
+    compile 'com.squareup.retrofit2:retrofit:2.0.2'
+    compile 'com.google.dagger:dagger:2.2'
+    compile 'org.glassfish:javax.annotation:10.0-b28'
+    compile 'com.google.code.gson:gson:2.6.2'
+    compile 'com.squareup.retrofit2:converter-gson:2.0.0'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.0.0'
+    compile 'io.reactivex:rxjava:1.1.1'
+    compile 'io.reactivex:rxandroid:1.1.0'
+    compile 'info.hoang8f:android-segmented:1.0.6'
+    compile 'com.bigkoo:convenientbanner:2.0.5'
+    compile 'de.hdodenhof:circleimageview:2.0.0'
     testCompile 'junit:junit:4.12'
 }
