--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.mezereon.bustrack">
+   package="com.example.mezereon" >
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name="Login.Activity.LoginActivity">
+        android:theme="@style/Theme.Design.Light.NoActionBar">
+        <activity android:name="com.example.mezereon.Login.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="Home.Activity.HomeActivity"></activity>
+        <activity android:name="com.example.mezereon.Home.HomeActivity"></activity>
     </application>
 
 </manifest>
