--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,10 +2,10 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 24
-    buildToolsVersion "24.0.3"
+    buildToolsVersion '25.0.2'
     defaultConfig {
         applicationId "com.example.mezereon"
-        minSdkVersion 18
+        minSdkVersion 21
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
@@ -50,6 +50,8 @@ dependencies {
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.android.support:support-v4:24.2.1'
     compile 'com.gospelware.liquidbutton:liquidButtonLib:1.1.4'
+    compile 'com.android.support:cardview-v7:24.2.1'
+    compile 'me.everything:overscroll-decor-android:1.0.4'
     testCompile 'junit:junit:4.12'
     compile files('libs/BaiduLBS_Android.jar')
     compile files('libs/hyphenatechat_3.2.3.jar')
