--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,9 +3,14 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 24
     buildToolsVersion '25.0.2'
+    useLibrary 'org.apache.http.legacy'
     defaultConfig {
+        ndk {
+            abiFilters "armeabi-v7a", "armeabi", "x86", "arm64-v8a"
+            // 指定要ndk需要兼容的架构(这样其他依赖包里arm64,arm64-v8a,arm-v8...之类的so会被过滤掉)
+        }
         applicationId "com.example.mezereon"
-        minSdkVersion 21
+        minSdkVersion 23
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
@@ -17,8 +22,8 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    sourceSets{
-        main{
+    sourceSets {
+        main {
             jniLibs.srcDir(['libs'])
         }
     }
@@ -29,6 +34,8 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    compile files('libs/BaiduLBS_Android.jar')
+    compile files('libs/hyphenatechat_3.2.3.jar')
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:design:24.2.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
@@ -52,7 +59,8 @@ dependencies {
     compile 'com.gospelware.liquidbutton:liquidButtonLib:1.1.4'
     compile 'com.android.support:cardview-v7:24.2.1'
     compile 'me.everything:overscroll-decor-android:1.0.4'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.google.android.gms:play-services-gcm:9.4.0'
+    compile 'com.hyphenate:hyphenate-sdk:3.2.3'
     testCompile 'junit:junit:4.12'
-    compile files('libs/BaiduLBS_Android.jar')
-    compile files('libs/hyphenatechat_3.2.3.jar')
 }
