--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.application'
-
 android {
     compileSdkVersion 24
     buildToolsVersion '25.0.2'
@@ -10,7 +9,7 @@ android {
             // 指定要ndk需要兼容的架构(这样其他依赖包里arm64,arm64-v8a,arm-v8...之类的so会被过滤掉)
         }
         applicationId "com.example.mezereon"
-        minSdkVersion 23
+        minSdkVersion 21
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
@@ -22,7 +21,19 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    sourceSets {
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES.txt'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/dependencies.txt'
+        exclude 'META-INF/LGPL2.1'
+    }
+        sourceSets {
         main {
             jniLibs.srcDir(['libs'])
         }
@@ -60,7 +71,21 @@ dependencies {
     compile 'com.android.support:cardview-v7:24.2.1'
     compile 'me.everything:overscroll-decor-android:1.0.4'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    testCompile 'junit:junit:4.12'
+    compile files('libs/jna-4.1.0.jar')
+    compile files('libs/jna-platform-4.1.0.jar')
+    compile files('libs/library-1.0.19.jar')
+    compile files('libs/okhttp-2.7.5.jar')
+    compile files('libs/okio-1.9.0.jar')
+    compile files('libs/httpmime-4.4-alpha1.jar')
+    compile files('libs/httpcore-4.4-alpha1.jar')
+    compile files('libs/httpclient-win-4.4-alpha1.jar')
+    compile files('libs/httpclient-cache-4.4-alpha1.jar')
+    compile files('libs/httpclient-4.4-alpha1.jar')
+    compile files('libs/gson-2.2.4.jar')
+    compile files('libs/fluent-hc-4.4-alpha1.jar')
+    compile files('libs/commons-logging-1.1.3.jar')
+    compile files('libs/commons-codec-1.6.jar')
     compile 'com.google.android.gms:play-services-gcm:9.4.0'
     compile 'com.hyphenate:hyphenate-sdk:3.2.3'
-    testCompile 'junit:junit:4.12'
 }
